misc/k8s/05-service.yml
apiVersion: v1
kind: Service
metadata:
    name: receiver-app
    namespace: stage-dev
spec:
    ports:
        - name: http
          targetPort: 8080
          port: 80
          protocol: TCP
    selector:
        app: receiver-app
