misc/k8s/06-ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
    name: receiver-app
    namespace: stage-dev
    annotations:
        kubernetes.io/ingress.class: "traefik"
        ingress.kubernetes.io/protocol: "http"
        traefik.ingress.kubernetes.io/router.entrypoints: web
spec:
    rules:
        - host: localhost
          http:
              paths:
                  - path: /
                    pathType: Prefix
                    backend:
                        service:
                            name: receiver-app
                            port:
                                number: 80
